--- a/app/src/main/res/drawable/grey_stroke_selector.xml
+++ b/app/src/main/res/drawable/grey_stroke_selector.xml
@@ -3,20 +3,20 @@
 
     <item android:state_pressed="false">
         <shape>
-            <solid android:color="@color/colorPrimary" />
+            <stroke android:width="@dimen/_1sdp" android:color="@color/grey" />
             <corners android:radius="@dimen/_5sdp" />
         </shape>
     </item>
     <item>
         <shape>
-            <solid android:color="@color/colorPrimaryDark" />
+            <stroke android:width="@dimen/_1sdp" android:color="@color/black" />
             <corners android:radius="@dimen/_5sdp" />
         </shape>
     </item>
 
     <item android:state_enabled="false">
         <shape>
-            <solid android:color="@color/grey" />
+            <stroke android:width="@dimen/_1sdp" android:color="@color/grey_light" />
             <corners android:radius="@dimen/_5sdp" />
         </shape>
     </item>
