--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -16,6 +14,7 @@
         <variable
             name="a"
             type="String" />
+
         <variable
             name="b"
             type="String" />
@@ -26,161 +25,80 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
-        android:paddingTop="@dimen/_15sdp"
-        android:paddingBottom="@dimen/_15sdp"
-        tools:context=".ui.main.MainActivity">
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="@dimen/_15sdp">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email_til"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_15sdp"
-            android:hint="@string/email"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.35">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etEmail"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:text="@={vm.emailObservable}"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.gigamole.library.ShadowLayout
-            android:id="@+id/btn"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/password_til"
-            app:sl_shadow_angle="90"
-            app:sl_shadow_color="@color/divider"
-            app:sl_shadow_distance="5dp"
-            app:sl_shadow_radius="5dp"
-            app:sl_shadowed="true">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_40sdp"
-                android:background="@drawable/shape_rectangle_round_corner">
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/login_tv"
-                    style="@style/Widget.AppCompat.Button.Colored"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/_40sdp"
-                    android:background="@android:color/transparent"
-                    android:onClick="@{() -> vm.doLoginProcess()}"
-                    android:text="Login"
-                    android:textAllCaps="false"
-                    android:textSize="@dimen/_14ssp" />
-
-
-                <com.wang.avi.AVLoadingIndicatorView
-                    android:id="@+id/avi"
-                    style="@style/AVLoadingIndicatorView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginBottom="@dimen/_20sdp"
-                    android:visibility="@{vm.progressObservable.booleanValue()? View.VISIBLE: View.INVISIBLE, default=visible}"
-                    app:indicatorColor="@color/white"
-                    app:indicatorName="LineScalePartyIndicator" />
-
-            </RelativeLayout>
-
-        </com.gigamole.library.ShadowLayout>
-
-        <!--        android:visibility="@{showProgress ? View.VISIBLE: View.INVISIBLE, default=visible}"-->
-        <!--<androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/login_tv"
-            style="@style/Widget.AppCompat.Button.Colored"
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:onClick="@{vm.doLoginProcess()}"
-            android:text="@string/login"
-            android:textAllCaps="false"
-            app:layout_constraintTop_toBottomOf="@+id/password_til" />-->
+            android:layout_height="@dimen/_70sdp"
+            android:layout_marginVertical="20dp"
+            android:src="@drawable/ic_logo_splash" />
 
-
-        <com.transport.mall.utils.custom.blinkingloader.BlinkingLoader
-            android:id="@+id/blinkingLoader"
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_10sdp"
-            android:visibility="gone"
-            app:auto_start="true"
-            app:dot_blinkingColor="@color/colorPrimary"
-            app:dot_neutralColor="@color/divider"
-            app:dot_num_dots="4"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:layout_margin="@dimen/_10sdp"
+            android:text="@string/verify"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_18ssp" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvOtpSentTo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_10sdp"
+            android:text="@string/enter_otp_sent_to"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_14ssp" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/btn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
+        <com.transport.mall.utils.common.OtpEditText
+            android:id="@+id/edOtp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:cursorVisible="true"
+            android:digits="1234567890"
+            android:inputType="number"
+            android:maxLength="4"
+            android:textIsSelectable="false"
+            android:textSize="20sp" />
 
+        <Button
+            android:id="@+id/btnLoginOwner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:background="@drawable/primary_color_btn_selector"
+            android:text="@string/continue_text"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
 
+        <Button
+            android:id="@+id/btnChangeNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/grey_stroke_selector"
+            android:text="@string/change_phone_number"
+            android:textAllCaps="false"
+            android:textColor="@color/black" />
 
+        <Button
+            android:id="@+id/btnResentOtp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/grey_stroke_selector"
+            android:text="@string/resend_otp"
+            android:textAllCaps="false"
+            android:textColor="@color/black" />
 
-            <!--        <androidx.recyclerview.widget.RecyclerView-->
-            <!--            android:id="@+id/recyclerView"-->
-            <!--            itemDecor="@{true}"-->
-            <!--            android:layout_width="0dp"-->
-            <!--            android:layout_height="0dp"-->
-            <!--            app:layout="@{R.layout.row_home_list}"-->
-            <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--            app:layout_constraintEnd_toEndOf="parent"-->
-            <!--            app:layout_constraintStart_toStartOf="parent"-->
-            <!--            app:layout_constraintTop_toTopOf="parent"-->
-            <!--            app:recyclerLinearAdapter="@{list}"-->
-            <!--            app:onItemClickListener="@{click}"/>-->
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{a}" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{b}" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{c}" />
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </layout>
