--- a/app/src/main/res/layout/row_user_list.xml
+++ b/app/src/main/res/layout/row_user_list.xml
@@ -25,6 +25,7 @@
         android:id="@+id/containerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/default_btn_selector"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/_5sdp">
@@ -39,8 +40,8 @@
             <com.transport.mall.utils.custom.CircleImageView
                 loadImage="@{model.ownerPic}"
                 placeholder="@{R.drawable.ic_profile_pic_placeholder}"
-                android:layout_width="@dimen/_35sdp"
-                android:layout_height="@dimen/_35sdp" />
+                android:layout_width="@dimen/_40sdp"
+                android:layout_height="@dimen/_40sdp" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -53,11 +54,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_10sdp"
-                    android:fontFamily="@font/opensans_bold"
+                    android:fontFamily="@font/opensans_semibold"
                     android:orientation="vertical"
                     android:text="@{model.ownerName}"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_14ssp"
+                    android:textSize="@dimen/_12ssp"
                     android:visibility="@{model.ownerName.trim().isEmpty() ? View.GONE : View.VISIBLE}" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -71,6 +72,13 @@
                     android:textColor="@color/black"
                     android:textSize="@dimen/_12ssp" />
             </LinearLayout>
+
+            <ImageView
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:src="@drawable/ic_add_dhaba_hilighted" />
+
         </LinearLayout>
 
         <View
