--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -229,8 +229,7 @@
                     placeholder="@{R.drawable.ic_profile_pic_placeholder}"
                     android:layout_width="@dimen/_40sdp"
                     android:layout_height="@dimen/_40sdp"
-                    android:layout_marginEnd="@dimen/_5sdp"
-                    android:src="@drawable/demo_profile_pic" />
+                    android:layout_marginEnd="@dimen/_5sdp"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
