--- a/app/src/main/res/layout/dialog_terms_and_conditions.xml
+++ b/app/src/main/res/layout/dialog_terms_and_conditions.xml
@@ -45,11 +45,20 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
+<!--
             <WebView
                 android:id="@+id/tvTerms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp" />
+-->
+
+            <TextView
+                android:id="@+id/tvText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/_10sdp"
+                />
 
         </ScrollView>
     </LinearLayout>
