--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -26,6 +26,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical">
 
         <ScrollView
@@ -149,6 +150,7 @@
                             android:inputType="number"
                             android:maxLength="10"
                             android:padding="@dimen/_10sdp"
+                            android:text="@={vm.mobileObservable}"
                             android:textColor="@color/black"
                             android:textColorHint="@color/grey"
                             android:textSize="@dimen/_13ssp" />
