--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
+        android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/_15sdp">
@@ -48,14 +49,27 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_18ssp" />
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvOtpSentTo"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_10sdp"
-            android:text="@string/enter_otp_sent_to"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_14ssp" />
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/enter_otp_sent_to"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14ssp" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvOtpSentTo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_14ssp" />
+        </LinearLayout>
 
         <com.transport.mall.utils.common.OtpEditText
             android:id="@+id/edOtp"
@@ -64,7 +78,7 @@
             android:cursorVisible="true"
             android:digits="1234567890"
             android:inputType="number"
-            android:maxLength="4"
+            android:maxLength="6"
             android:textIsSelectable="false"
             android:textSize="20sp" />
 
@@ -86,6 +100,7 @@
             android:background="@drawable/grey_stroke_selector"
             android:text="@string/change_phone_number"
             android:textAllCaps="false"
+            android:visibility="gone"
             android:textColor="@color/black" />
 
         <Button
