OTP verification done

--- a/app/src/main/res/drawable/grey_stroke_selector.xml
+++ b/app/src/main/res/drawable/grey_stroke_selector.xml
@@ -7,7 +7,7 @@
             <corners android:radius="@dimen/_5sdp" />
         </shape>
     </item>
-    <item>
+    <item android:state_pressed="true">
         <shape>
             <stroke android:width="@dimen/_1sdp" android:color="@color/black" />
             <corners android:radius="@dimen/_5sdp" />
